--- a/html/setting/setting.html
+++ b/html/setting/setting.html
@@ -8,7 +8,7 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-		<link rel="stylesheet" href="css/mui.min.css">
+		<link rel="stylesheet" href="../../css/mui.min.css">
 		<style>
 			html,
 			body {
@@ -186,9 +186,6 @@
 		<div id="setting" class="mui-page">
 			<!--页面标题栏开始-->
 			<div class="mui-navbar-inner mui-bar mui-bar-nav">
-				<button type="button" class="mui-left mui-action-back mui-btn  mui-btn-link mui-btn-nav mui-pull-left">
-					<span class="mui-icon mui-icon-left-nav"></span>
-				</button>
 				<h1 class="mui-center mui-title">设置</h1>
 			</div>
 			<!--页面标题栏结束-->
@@ -554,7 +551,7 @@
 		</div>
 
 	</body>
-	<script src="js/mui.min.js "></script>
+	<script src="../../js/mui.min.js"></script>
 	<script src="js/mui.view.js "></script>
 	<script src='js/feedback.js'></script>
 	<script>
@@ -567,20 +564,7 @@
 		mui('.mui-scroll-wrapper').scroll();
 		//分享操作
 		var shares = {};
-		
-		mui.plusReady(function() {
-			plus.share.getServices(function(s) {
-				if (s && s.length > 0) {
-					for (var i = 0; i < s.length; i++) {
-						var t = s[i];
-						shares[t.id] = t;
-					}
-				}
-			}, function() {
-				console.log("获取分享服务列表失败");
-			});
-		});
-		
+	
 		setTimeout(function () {
 			defaultImg();
 			setTimeout(function() {
@@ -588,57 +572,7 @@
 			}, 300);
 		},500);
 		
-		//分享链接点击事件
-		document.getElementById("share").addEventListener('tap', function() {
-			var ids = [{
-					id: "weixin",
-					ex: "WXSceneSession"
-				}, {
-					id: "weixin",
-					ex: "WXSceneTimeline"
-				}, {
-					id: "sinaweibo"
-				}, {
-					id: "tencentweibo"
-				}, {
-					id: "qq"
-				}],
-				bts = [{
-					title: "发送给微信好友"
-				}, {
-					title: "分享到微信朋友圈"
-				}, {
-					title: "分享到新浪微博"
-				}, {
-					title: "分享到腾讯微博"
-				}, {
-					title: "分享到QQ"
-				}];
-			plus.nativeUI.actionSheet({
-				cancel: "取消",
-				buttons: bts
-			}, function(e) {
-				var i = e.index;
-				if (i > 0) {
-					var s_id = ids[i - 1].id;
-					var share = shares[s_id];
-					if (share) {
-						if (share.authenticated) {
-							shareMessage(share, ids[i - 1].ex);
-						} else {
-							share.authorize(function() {
-								shareMessage(share, ids[i - 1].ex);
-							}, function(e) {
-								console.log("认证授权失败：" + e.code + " - " + e.message);
-							});
-						}
-					} else {
-						mui.toast("无法获取分享服务，请检查manifest.json中分享插件参数配置，并重新打包")
-					}
-				}
-			});
-		});
-
+	
 		function shareMessage(share, ex) {
 			var msg = {
 				extra: {
