--- a/html/main/main.html
+++ b/html/main/main.html
@@ -9,58 +9,56 @@
 	</head>
 
 	<body>
-		<header class="mui-bar mui-bar-nav">
-			<h1 class="mui-title">手机列表</h1>
-		</header>
-		<div class="mui-content">
-			<ul class="mui-table-view">
-				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
-						<img class="mui-media-object mui-pull-left" src="http://placehold.it/40x30">
-						<div class="mui-media-body">
-							幸福
-							<p class="mui-ellipsis">能和心爱的人一起睡觉，是件幸福的事情；可是，打呼噜怎么办？</p>
-						</div>
-					</a>
-				</li>
-				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
-						<img class="mui-media-object mui-pull-left" src="http://placehold.it/40x30">
-						<div class="mui-media-body">
-							木屋
-							<p class="mui-ellipsis">想要这样一间小木屋，夏天挫冰吃瓜，冬天围炉取暖.</p>
-						</div>
-					</a>
-				</li>
-				<li class="mui-table-view-cell mui-media">
-					<a href="javascript:;">
-						<img class="mui-media-object mui-pull-left" src="http://placehold.it/40x30">
-						<div class="mui-media-body">
-							CBD
-							<p class="mui-ellipsis">烤炉模式的城，到黄昏，如同打翻的调色盘一般.</p>
-						</div>
-					</a>
-				</li>
-			</ul>
-		</div>
 		<nav class="mui-bar mui-bar-tab">
-			<a class="mui-tab-item mui-active">
+			<a class="mui-tab-item mui-active" html="list">
 				<span class="mui-icon mui-icon-home"></span>
-				<span class="mui-tab-label">手机</span>
+				<span class="mui-tab-label">首页</span>
 			</a>
-			<a class="mui-tab-item">
+			<a class="mui-tab-item" html="record">
 				<span class="mui-icon mui-icon-phone"></span>
-				<span class="mui-tab-label">订单</span>
+				<span class="mui-tab-label">记录</span>
 			</a>
-			<a class="mui-tab-item">
-				<span class="mui-icon mui-icon-email"></span>
-				<span class="mui-tab-label">我</span>
+			<a class="mui-tab-item" html="setting">
+				<span class="mui-icon mui-icon-gear"></span>
+				<span class="mui-tab-label">设置</span>
 			</a>
 		</nav>
 
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript">
-			mui.init()
+			var htmlobj = {
+				list: '../list/list.html',
+				record : '../record/record.html',
+				setting: '../setting/setting.html'
+			}
+			var htmlstyles = {
+				top: '0px', //子页面顶部位置
+				bottom: '51px' //子页面底部位置
+			};
+			var html = {};
+			mui.init({
+				subpages: [{
+					url: htmlobj.list, //子页面HTML地址，支持本地地址和网络地址
+					id: 'list', //子页面标志
+					styles: htmlstyles,
+					extras: {} //额外扩展参数
+				}]
+			});
+			mui("body").on('tap', '.mui-tab-item', function() {
+				var id = this.getAttribute("html");
+				plus.webview.show(html[id].id);
+			})
+
+			mui.plusReady(function() {
+				var sub;
+				for(var i in htmlobj) {
+					sub = plus.webview.create(htmlobj[i],i,htmlstyles);
+					html[i] = {
+						id: i,
+						webview: sub
+					}
+				}
+			})
 		</script>
 	</body>
 
