--- a/html/main/tab-webview-subpage-setting.html
+++ b/html/main/tab-webview-subpage-setting.html
@@ -8,7 +8,7 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-		<link rel="stylesheet" href="../css/mui.min.css">
+		<link rel="stylesheet" href="../../css/mui.min.css">
 		<style>
 			html,body {
 				background-color: #efeff4;
@@ -26,6 +26,9 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">设置</h1>
 		</header>-->
+		<header class="mui-bar mui-bar-nav">
+		    <h1 class="mui-title">设置</h1>
+		</header>
 		<div class="mui-content">
 			<div class="title">
 				这是webview模式选项卡中的第4个子页面，该页面展示一个常见的设置示例
