--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
 					}
 				});
 			})
+			
+			
+			//检查更新
+			setTimeout(function(){
+				// ios
+				
+				//and
+				
+			},5000)
+			
 		</script>
 	</body>
 
