--- a/html/main/main.html
+++ b/html/main/main.html
@@ -19,28 +19,32 @@
 
 	<body>
 		<nav class="mui-bar mui-bar-tab">
-			<a id="defaultTab" class="mui-tab-item mui-active" href="tab-webview-subpage-about.html">
-				<span class="mui-icon mui-icon-home"></span>
-				<span class="mui-tab-label">首页</span>
+			<a id="defaultTab" class="mui-tab-item mui-active" href="tab-webview-subpage-product.html">
+				<span class="mui-icon mui-icon-checkbox"></span>
+				<span class="mui-tab-label">商品列表</span>
 			</a>
-			<a class="mui-tab-item" href="tab-webview-subpage-chat.html">
-				<span class="mui-icon mui-icon-email"><span class="mui-badge">9</span></span>
-				<span class="mui-tab-label">消息</span>
+			<a id="defaultTab" class="mui-tab-item" href="tab-webview-subpage-order.html">
+				<span class="mui-icon mui-icon-compose"></span>
+				<span class="mui-tab-label">订单管理</span>
 			</a>
-			<a class="mui-tab-item" href="tab-webview-subpage-contact.html">
-				<span class="mui-icon mui-icon-contact"></span>
-				<span class="mui-tab-label">通讯录</span>
+			<a class="mui-tab-item" href="tab-webview-subpage-phoneprofit.html">
+				<span class="mui-icon mui-icon-phone"><span class="mui-badge">9</span></span>
+				<span class="mui-tab-label">手机分润</span>
+			</a>
+			<a class="mui-tab-item" href="tab-webview-subpage-chargeprofit.html">
+				<span class="mui-icon mui-icon-minus"></span>
+				<span class="mui-tab-label">话费分润</span>
 			</a>
 			<a class="mui-tab-item" href="tab-webview-subpage-setting.html">
 				<span class="mui-icon mui-icon-gear"></span>
-				<span class="mui-tab-label">设置</span>
+				<span class="mui-tab-label">个人信息</span>
 			</a>
 		</nav>
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			 //mui初始化
 			mui.init();
-			var subpages = ['tab-webview-subpage-about.html', 'tab-webview-subpage-chat.html', 'tab-webview-subpage-contact.html', 'tab-webview-subpage-setting.html'];
+			var subpages = ['tab-webview-subpage-product.html', 'tab-webview-subpage-phoneprofit.html','tab-webview-subpage-order.html', 'tab-webview-subpage-chargeprofit.html', 'tab-webview-subpage-setting.html'];
 			var subpage_style = {
 				top: '0px',
 				bottom: '51px'
@@ -51,7 +55,7 @@
 			 //创建子页面，首个选项卡页面显示，其它均隐藏；
 			mui.plusReady(function() {
 				var self = plus.webview.currentWebview();
-				for (var i = 0; i < 4; i++) {
+				for (var i = 0; i < 5; i++) {
 					var temp = {};
 					var sub = plus.webview.create(subpages[i], subpages[i], subpage_style);
 					if (i > 0) {
@@ -80,7 +84,7 @@
 					var temp = {};
 					temp[targetTab] = "true";
 					mui.extend(aniShow,temp);
-					plus.webview.show(targetTab,"fade-in",300);
+					plus.webview.show(targetTab,"fade-in",100);
 				}
 				//隐藏当前;
 				plus.webview.hide(activeTab);
