--- a/html/main/tab-webview-subpage-product.html
+++ b/html/main/tab-webview-subpage-product.html
@@ -21,14 +21,11 @@
 	</head>
 	<body>
 		<header class="mui-bar mui-bar-nav">
-		    <h1 class="mui-title">1</h1>
+		    <h1 class="mui-title">商品列表</h1>
 		</header>
 		<div class="mui-content">
 			<div class="title">
-				<p>这是webview模式选项卡的第1个子页面</p>
-				<p>何谓webview模式？其实就是每个选项卡内容都是一个独立的webview，彼此之间互相独立、互不影响；
-					对于较为复杂的业务系统，推荐使用该模式。</p>
-				<p>基于webview模式的选项卡，支持原生加速的下拉刷新，点击第二个选项卡（“消息”），切换选项卡，体验下拉刷新；</p>
+				详细列表
 			</div>
 		</div>
 	</body>
