--- a/html/main/tab-webview-subpage-setting.html
+++ b/html/main/tab-webview-subpage-setting.html
@@ -14,48 +14,28 @@
 			body {
 				background-color: #efeff4;
 			}
-			
-			.title {
-				margin: 20px 15px 10px;
-				color: #6d6d72;
-				font-size: 15px;
-			}
 		</style>
 	</head>
 
 	<body>
-		<!--<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">设置</h1>
-		</header>-->
 		<header class="mui-bar mui-bar-nav">
 			<h1 class="mui-title">设置</h1>
 		</header>
 		<div class="mui-content">
-			<div class="title">
-				这是webview模式选项卡中的第4个子页面，该页面展示一个常见的设置示例
-			</div>
 			<ul class="mui-table-view">
 				<li class="mui-table-view-cell">
 					<a class="mui-navigate-right">
-						新消息通知
+						提现
+					</a>
+				</li>
+				<li class="mui-table-view-cell">
+					<a id="changepassword" class="mui-navigate-right">
+						修改密码
 					</a>
 				</li>
 				<li class="mui-table-view-cell">
 					<a class="mui-navigate-right">
-						隐私
-					</a>
-				</li>
-				<li class="mui-table-view-cell">
-					<a class="mui-navigate-right">
-						通用
-					</a>
-				</li>
-			</ul>
-			<ul class="mui-table-view" style="margin-top: 25px;">
-				<li class="mui-table-view-cell">
-					<a id="about" class="mui-navigate-right">
-						关于mui
+						联系客服
 					</a>
 				</li>
 			</ul>
@@ -72,14 +52,14 @@
 	<script src="../../js/mui.min.js"></script>
 	<script>
 		mui.init({
-			swipeBack: true //启用右滑关闭功能
+			//			swipeBack: true //启用右滑关闭功能
 		});
-		document.getElementById("about").addEventListener('tap', function() {
-			//获得主页面的webview
-			var main = plus.webview.currentWebview().parent();
-			//触发主页面的gohome事件
-			mui.fire(main, 'gohome');
-		});
+		//		document.getElementById("about").addEventListener('tap', function() {
+		//			//获得主页面的webview
+		//			var main = plus.webview.currentWebview().parent();
+		//			//触发主页面的gohome事件
+		//			mui.fire(main, 'gohome');
+		//		});
 		document.getElementById("exit").addEventListener('tap', function() {
 			mui.openWindow({
 				url: '../log/login.html',
@@ -90,6 +70,13 @@
 			//			var main = plus.webview.currentWebview().parent();
 			//			//触发主页面的gohome事件
 			//			mui.fire(main,'gohome');
+		});
+
+		document.getElementById("changepassword").addEventListener('tap', function() {
+			mui.prompt('修改密码', '输入新密码', '', ['确定', '取消'], function(obj) {
+				var value = obj.value; //输入的数据
+				mui.toast("修改成功")
+			}, 'div')
 		});
 	</script>
 
